# store

./: .env  Readme.md  db.sqlite3  package-lock.json  pyproject.toml
accounts/: admin.py  models.py  serializers.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
config/: settings.py  urls.py
frontend/: index.html  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.jsx
frontend/src/api/: api.jsx  fetch.jsx  utils.jsx
frontend/src/components/: AddProductForm.jsx  Admin.jsx  EditProductForm.jsx  Login.jsx  ProductCatalog.jsx  ProductList.jsx
frontend/src/components/ui/: select.jsx
products/: models.py  serializers.py  urls.py  views.py
products/migrations/: 0001_initial.py  0002_alter_product_image.py  0003_alter_product_category.py  0004_category_slug.py  0005_product_available.py  0006_alter_product_category_alter_product_name_and_more.py
staticfiles/: staticfiles.json
