[project]
name = "store"
version = "0.1.0"
description = ""
authors = [
    {name = "juraevdev",email = "juraevdevpy@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "python-decouple (>=3.8,<4.0)",
    "python-environ (>=0.4.54,<0.5.0)",
    "django-cors-headers (>=4.7.0,<5.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
